// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AchievementList > renders 1`] = `
"<div data-v-1c120264="" class="has-scroll m-0 p-0" data-test-id="achievement-list">
  <!--v-if-->
  <div data-v-1c120264="" class="flex-container flex-col">
    <h2 class="label-like">This week's toil</h2>
    <ul data-v-1c120264="" class="achievement-list__badge-container">
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" aria-label="5 varieties of nuts this week." data-test-id="badge-goNuts-3" class="badge__goNuts badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🥜</div>
        </div>
        <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Go nuts</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" aria-label="5 different citrus fruits this week." data-test-id="badge-lemons-3" class="badge__lemons badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🍋</div>
        </div>
        <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Lemons</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" aria-label="10 red veggies this week." data-test-id="badge-allOnRed-3" class="badge__allOnRed badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">♥️</div>
        </div>
        <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">All on red</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" aria-label="15 botanical berries this week." data-test-id="badge-botanicalBerries-3" class="badge__botanicalBerries badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🍅</div>
        </div>
        <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">"Berries"</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" aria-label="30 unique veggies this week" data-test-id="badge-thirtyVeggies-3" class="badge__thirtyVeggies badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🎉</div>
        </div>
        <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">30 Weekly</div>
      </li>
      <!--v-if-->
    </ul>
  </div>
  <div data-v-1c120264="" class="flex-container flex-col">
    <h2 class="label-like">The Completionist</h2>
    <ul data-v-1c120264="" class="achievement-list__badge-container">
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" aria-label="40 unique veggies" data-test-id="badge-completionist-1" class="badge__completionist badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Bronze" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🐣</div>
        </div>
        <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">40 veggies</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" aria-label="80 unique veggies" data-test-id="badge-completionist-2" class="badge__completionist badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Silver" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🐧</div>
        </div>
        <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">80 veggies</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" aria-label="150 unique veggies" data-test-id="badge-completionist-3" class="badge__completionist badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🦅</div>
        </div>
        <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">150 veggies</div>
      </li>
    </ul>
  </div>
  <div data-v-1c120264="" class="flex-container flex-col">
    <h2 class="label-like">Challenge Accepted</h2>
    <ul data-v-1c120264="" class="achievement-list__badge-container">
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" aria-label="5 completed weekly challenges" data-test-id="badge-challengeAccepted-1" class="badge__challengeAccepted badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Bronze" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🚁</div>
        </div>
        <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">5 challenges</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" aria-label="10 completed weekly challenges" data-test-id="badge-challengeAccepted-2" class="badge__challengeAccepted badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Silver" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">✈️</div>
        </div>
        <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">10 challenges</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" aria-label="20 completed weekly challenges" data-test-id="badge-challengeAccepted-3" class="badge__challengeAccepted badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🚀</div>
        </div>
        <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">20 challenges</div>
      </li>
    </ul>
  </div>
  <div data-v-1c120264="" class="flex-container flex-col">
    <h2 class="label-like">The Committed</h2>
    <ul data-v-1c120264="" class="achievement-list__badge-container">
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" aria-label="3 months of active use" data-test-id="badge-committed-1" class="badge__committed badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Bronze" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🌱</div>
        </div>
        <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">3 months</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" aria-label="6 months of active use" data-test-id="badge-committed-2" class="badge__committed badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Silver" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🪴</div>
        </div>
        <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">6 months</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" aria-label="12 months of active use" data-test-id="badge-committed-3" class="badge__committed badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🎄</div>
        </div>
        <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">12 months</div>
      </li>
    </ul>
  </div>
  <div data-v-1c120264="" class="flex-container flex-col">
    <h2 class="label-like">Hot Streak</h2>
    <ul data-v-1c120264="" class="achievement-list__badge-container">
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" aria-label="5 week streak of over 30 veggies" data-test-id="badge-hotStreak-1" class="badge__hotStreak badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Bronze" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🌶️</div>
        </div>
        <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">5 Weeks</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" aria-label="10 week streak of over 30 veggies" data-test-id="badge-hotStreak-2" class="badge__hotStreak badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Silver" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🔥</div>
        </div>
        <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">10 Weeks</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" aria-label="20 week streak of over 30 veggies" data-test-id="badge-hotStreak-3" class="badge__hotStreak badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🌋</div>
        </div>
        <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">20 Weeks</div>
      </li>
    </ul>
  </div>
  <div data-v-1c120264="" class="flex-container flex-col">
    <h2 class="label-like">The Experimenter</h2>
    <ul data-v-1c120264="" class="achievement-list__badge-container">
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" aria-label="15 unique fruits and berries" data-test-id="badge-experimenterFruit-3" class="badge__experimenterFruit badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🍎</div>
        </div>
        <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Fruits</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" aria-label="15 unique vegetables" data-test-id="badge-experimenterVegetable-3" class="badge__experimenterVegetable badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🥦</div>
        </div>
        <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Vegetables</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" aria-label="15 unique leafy greens" data-test-id="badge-experimenterLeafy-3" class="badge__experimenterLeafy badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🥬</div>
        </div>
        <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Leafy Greens</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" aria-label="15 unique roots and bulbs" data-test-id="badge-experimenterRoot-3" class="badge__experimenterRoot badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🥕</div>
        </div>
        <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Roots</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" aria-label="15 unique beans and legumes" data-test-id="badge-experimenterBean-3" class="badge__experimenterBean badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🫛</div>
        </div>
        <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Beans</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" aria-label="15 unique grains, nuts and seeds" data-test-id="badge-experimenterGrain-3" class="badge__experimenterGrain badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🌾</div>
        </div>
        <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Grains</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" aria-label="10 unique mushrooms" data-test-id="badge-experimenterMushroom-3" class="badge__experimenterMushroom badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🍄‍🟫</div>
        </div>
        <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Mushrooms</div>
      </li>
    </ul>
  </div>
</div>"
`;

exports[`AchievementList > renders with some badges enabled 1`] = `
"<div data-v-1c120264="" class="has-scroll m-0 p-0" data-test-id="achievement-list">
  <div data-v-1c120264="" class="flex-container flex-col" data-test-id="thousands-container">
    <h2 class="label-like">A thousand and one veggies</h2>
    <ul data-v-1c120264="" class="achievement-list__badge-container">
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="false" aria-label="A thousand veggies logged" data-test-id="thousands-odd-achievement" class="badge__thousandsOdd badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Platinum" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🐐</div>
        </div>
        <!--v-if-->
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">GOAT</div>
      </li>
      <!--v-if-->
    </ul>
  </div>
  <div data-v-1c120264="" class="flex-container flex-col">
    <h2 class="label-like">This week's toil</h2>
    <ul data-v-1c120264="" class="achievement-list__badge-container">
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="false" aria-label="5 varieties of nuts this week." data-test-id="badge-goNuts-3" class="badge__goNuts badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🥜</div>
        </div>
        <!--v-if-->
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Go nuts</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="false" aria-label="5 different citrus fruits this week." data-test-id="badge-lemons-3" class="badge__lemons badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🍋</div>
        </div>
        <!--v-if-->
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Lemons</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="false" aria-label="10 red veggies this week." data-test-id="badge-allOnRed-3" class="badge__allOnRed badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">♥️</div>
        </div>
        <!--v-if-->
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">All on red</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="false" aria-label="15 botanical berries this week." data-test-id="badge-botanicalBerries-3" class="badge__botanicalBerries badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🍅</div>
        </div>
        <!--v-if-->
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">"Berries"</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="false" aria-label="30 unique veggies this week" data-test-id="badge-thirtyVeggies-3" class="badge__thirtyVeggies badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🎉</div>
        </div>
        <!--v-if-->
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">30 Weekly</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="false" aria-label="40 unique veggies this week" data-test-id="badge-thirtyVeggies-4" class="badge__thirtyVeggies badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Platinum" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">💎</div>
        </div>
        <!--v-if-->
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">40 Weekly</div>
      </li>
    </ul>
  </div>
  <div data-v-1c120264="" class="flex-container flex-col">
    <h2 class="label-like">The Completionist</h2>
    <ul data-v-1c120264="" class="achievement-list__badge-container">
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="false" aria-label="40 unique veggies" data-test-id="badge-completionist-1" class="badge__completionist badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Bronze" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🐣</div>
        </div>
        <!--v-if-->
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">40 veggies</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="false" aria-label="80 unique veggies" data-test-id="badge-completionist-2" class="badge__completionist badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Silver" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🐧</div>
        </div>
        <!--v-if-->
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">80 veggies</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" aria-label="150 unique veggies" data-test-id="badge-completionist-3" class="badge__completionist badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🦅</div>
        </div>
        <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">150 veggies</div>
      </li>
    </ul>
  </div>
  <div data-v-1c120264="" class="flex-container flex-col">
    <h2 class="label-like">Challenge Accepted</h2>
    <ul data-v-1c120264="" class="achievement-list__badge-container">
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" aria-label="5 completed weekly challenges" data-test-id="badge-challengeAccepted-1" class="badge__challengeAccepted badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Bronze" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🚁</div>
        </div>
        <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">5 challenges</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" aria-label="10 completed weekly challenges" data-test-id="badge-challengeAccepted-2" class="badge__challengeAccepted badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Silver" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">✈️</div>
        </div>
        <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">10 challenges</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" aria-label="20 completed weekly challenges" data-test-id="badge-challengeAccepted-3" class="badge__challengeAccepted badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🚀</div>
        </div>
        <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">20 challenges</div>
      </li>
    </ul>
  </div>
  <div data-v-1c120264="" class="flex-container flex-col">
    <h2 class="label-like">The Committed</h2>
    <ul data-v-1c120264="" class="achievement-list__badge-container">
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" aria-label="3 months of active use" data-test-id="badge-committed-1" class="badge__committed badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Bronze" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🌱</div>
        </div>
        <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">3 months</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" aria-label="6 months of active use" data-test-id="badge-committed-2" class="badge__committed badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Silver" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🪴</div>
        </div>
        <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">6 months</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" aria-label="12 months of active use" data-test-id="badge-committed-3" class="badge__committed badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🎄</div>
        </div>
        <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">12 months</div>
      </li>
    </ul>
  </div>
  <div data-v-1c120264="" class="flex-container flex-col">
    <h2 class="label-like">Hot Streak</h2>
    <ul data-v-1c120264="" class="achievement-list__badge-container">
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" aria-label="5 week streak of over 30 veggies" data-test-id="badge-hotStreak-1" class="badge__hotStreak badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Bronze" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🌶️</div>
        </div>
        <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">5 Weeks</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" aria-label="10 week streak of over 30 veggies" data-test-id="badge-hotStreak-2" class="badge__hotStreak badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Silver" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🔥</div>
        </div>
        <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">10 Weeks</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" aria-label="20 week streak of over 30 veggies" data-test-id="badge-hotStreak-3" class="badge__hotStreak badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🌋</div>
        </div>
        <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">20 Weeks</div>
      </li>
    </ul>
  </div>
  <div data-v-1c120264="" class="flex-container flex-col">
    <h2 class="label-like">The Experimenter</h2>
    <ul data-v-1c120264="" class="achievement-list__badge-container">
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="false" aria-label="15 unique fruits and berries" data-test-id="badge-experimenterFruit-3" class="badge__experimenterFruit badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🍎</div>
        </div>
        <!--v-if-->
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Fruits</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="false" aria-label="15 unique vegetables" data-test-id="badge-experimenterVegetable-3" class="badge__experimenterVegetable badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🥦</div>
        </div>
        <!--v-if-->
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Vegetables</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="false" aria-label="15 unique leafy greens" data-test-id="badge-experimenterLeafy-3" class="badge__experimenterLeafy badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🥬</div>
        </div>
        <!--v-if-->
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Leafy Greens</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="false" aria-label="15 unique roots and bulbs" data-test-id="badge-experimenterRoot-3" class="badge__experimenterRoot badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🥕</div>
        </div>
        <!--v-if-->
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Roots</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="false" aria-label="15 unique beans and legumes" data-test-id="badge-experimenterBean-3" class="badge__experimenterBean badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🫛</div>
        </div>
        <!--v-if-->
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Beans</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="false" aria-label="15 unique grains, nuts and seeds" data-test-id="badge-experimenterGrain-3" class="badge__experimenterGrain badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🌾</div>
        </div>
        <!--v-if-->
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Grains</div>
      </li>
      <li data-v-06381b3c="" data-v-1c120264="" aria-disabled="false" aria-label="10 unique mushrooms" data-test-id="badge-experimenterMushroom-3" class="badge__experimenterMushroom badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
          <div data-v-06381b3c="" class="badge__emoji">🍄‍🟫</div>
        </div>
        <!--v-if-->
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Mushrooms</div>
      </li>
    </ul>
  </div>
</div>"
`;
